--- a/css/laos.css
+++ b/css/laos.css
@@ -101,7 +101,7 @@ tr:nth-child(2n+1) {
 /*L kasten links*/
 .mainNavOdc,.headerODM{background:#3b2226;}
 /*nav oben*/
-.white #cNavNew.current-site-mekong{background:#583a43;}
+.white #cNavNew.current-site-mekong,.contentNavigation{background:#583a43;}
 /*header text*/
 .white #headerText span a{color:#D61E2A;text-decoration: none;}
 /****  remove **** /*level 1 hover*/
