--- a/css/vietnam.css
+++ b/css/vietnam.css
@@ -98,7 +98,7 @@ tr:nth-child(2n+1) {
 /*L kasten links*/
 .mainNavOdc,.headerODM{background:#3D9C00;}
 /*nav oben*/
-.white #cNavNew.current-site-mekong{background:#42aa00;}
+.white #cNavNew.current-site-mekong,.contentNavigation{background:#42aa00;}
 /*header text*/
 .white #headerText span a{color:#C6C366;text-decoration: none;}
 
